2005-10-03  Elijah Newren  <newren@gmail.com>

	* smoketesting/convert-to-tarballs.py:
	Strip out checkoutdir attributes on modules; jhbuild doesn't like
	it when tarballs extract to libxml2-2.6.22 and there's a
	checkoutdir attribute claiming it will be named libxml2

	* smoketesting/tarball-conversion.config:
	Remove libpixman, note the new tarball location for cairo
	tarballs, list the tarball location for iso-codes (needed since
	gnome-2.12.modules switched to using cvs for that module), provide
	renames for cairo-1-0 and popler-0-4 to cairo and poppler,
	respectively

2005-09-06  Elijah Newren  <newren@gmail.com>

	* ChangeLog: 
	I'd rather track changes under tools/ here rather than under the
	main ChangeLog (besides, it looks like we haven't been logging the
	changes so far, so this won't be much different...)

	* smoketesting/covert-to-tarballs.py:
	Handle svnmodule packages

	* versions:
	Update to the versions used in the 2.12.0 release

	* smoketesting/sample-tarball.jhbuildrc:
	Update to 2.12.0 (and skip evolution-exchange since I can't test
	it and most probably can't either)