@@ -80,7 +80,7 @@
     <package name="gob2"/>
     ## PLATFORM
     <package name="GConf"                 set="platform"/>
-    <package name="ORBit2"                set="platform"/>
+    <package name="ORBit2"                set="platform" limit="2.13"/>
     <package name="at-spi"                set="platform"/>
     <package name="atk"                   set="platform"/>
     <package name="audiofile"             set="platform"/>
@@ -133,7 +133,7 @@
     <package name="gnopernicus"           set="desktop"/>
     <package name="gok"                   set="desktop"/>
     <package name="gst-plugins"           set="desktop"/>
-    <package name="gstreamer"             set="desktop"/>
+    <package name="gstreamer"             set="desktop" limit="0.9"/>
     <package name="gtk-engines"           set="desktop"/>
     <package name="gtksourceview"         set="desktop"/>
     <package name="gucharmap"             set="desktop"/>
